[package]
name = "mz-flatcontainer"
description = "Materialize's flatcontainer implementations."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
flatcontainer = "0.4"
workspace-hack = { version = "0.0.0", path = "../workspace-hack" }

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]
